v2.165.0: the Browser paints Arabic, Persian and Hindi shaped (#789)
* wip v2.165.0: shape complex scripts the Browser's WebKit paints unshaped

* wip v2.165.0: conf gate and wiring gate for the shaping

* wip v2.165.0: the agent's Instrumentation is private

* wip v2.165.0: the Instrumentation handoff is one-shot

* wip v2.165.0: a newer attach supersedes an unclaimed handoff

* v2.165.0: the install outcome is public — the Browser's method reference reaches it from another package

* v2.165.0: the install reference is tested from the Browser's package

* v2.165.0: docs — changelog, ledger 99 closed, l10n completion, guide, plan, status

* v2.165.0: the Arabic and Hindi DevTools pictures, re-forged shaped

* v2.165.0: the shaping bridge's pure parts extracted and tested against real JavaFX classes

* v2.165.0: the transformer's rewrite and refusal paths tested

* v2.165.0: the Docker-view gate's leash fits a cold macOS runner